--- a/style.css
+++ b/style.css
@@ -62,6 +62,21 @@ header {
   z-index: 1;
 }
 
+.real-section::after {
+  content: "";
+  width: 30px;
+  height: 100%;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 10px;
+  background-image: linear-gradient(
+    69deg
+    , #5ddcff, #8900af 43%, #ff0000);
+    position: absolute;
+    z-index: 0;
+    top: 0%;
+    left: -1%;
+
+}
 
 
 .real-section h2 {
